# lessence

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  deny.toml  release-please-config.json  renovate.json  rustfmt.toml
.beads/: config.yaml  issues.jsonl
.cargo/: mutants.toml
.claude/: settings.json
.claude/skills/lessence/: SKILL.md
.claude/skills/lessence/references/: flags.md
.claude/skills/pattern-dev/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/testing/: SKILL.md
.config/: nextest.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release-build.yml  release-notes.yml  release.yml  weekly.yml
.ideas/: mutant-kills.md
benches/: calibrate_rollup.rs  folder_e2e.rs  folder_parallel_e2e.rs  folder_streaming_only.rs  normalize_line.rs
docs/: bench.md  format-json-schema.md  rollup-calibration.md
examples/: ATTRIBUTION.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_fold.rs  fuzz_normalize.rs
openspec/changes/archive/2026-04-01-bead-cft/specs/top-n-mode/: spec.md
openspec/changes/archive/2026-04-01-bead-dno/: design.md  tasks.md
openspec/changes/archive/2026-04-01-fail-on-pattern/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-01-remove-max-tokens/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-01-remove-max-tokens/specs/max-tokens/: spec.md
openspec/changes/archive/2026-04-01-rfb/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-01-shell-completions/: design.md  proposal.md  tasks.md
openspec/changes/bead-cft/: design.md  proposal.md  tasks.md
openspec/changes/bead-dno/: proposal.md
openspec/changes/bead-dno/specs/file-input/: spec.md
openspec/specs/fail-on-pattern/: spec.md
openspec/specs/shell-completions/: spec.md
openspec/specs/stats-json/: spec.md
proptest-regressions/: folder.txt
results/: results.tsv
src/: analyzer.rs  config.rs  folder.rs  lib.rs  main.rs  normalize.rs  report.rs
src/cli/: mod.rs
src/essence/: mod.rs  processor.rs
src/output/: mod.rs
src/patterns/: bracket_context.rs  duration.rs  email.rs  hash.rs  http_status.rs  json.rs  key_value.rs  kubernetes.rs  log_module.rs  mod.rs  names.rs  network.rs  path.rs  process.rs  quoted.rs  structured.rs  uuid.rs
src/patterns/timestamp/: detector.rs  formats.rs  mod.rs  priority.rs  registry.rs
tests/: contract.rs  email_redos.rs  input_limits.rs  integration.rs  integration_email_compression.rs  ipv6_redos.rs  misc.rs  pii_sanitization.rs  security.rs  security_compliance.rs  test_email_statistics.rs  test_sanitize_pii.rs  timeout_protection.rs  timestamp_redos.rs  unit.rs
tests/benchmarks/: test_detection_performance.rs
tests/common/: mod.rs
tests/contract/: test_cli_interface.rs  test_cli_validation.rs  test_functionality_preservation.rs  test_timestamp_constitution.rs  test_zero_warnings.rs
tests/fixtures/: README.md  log_generator.rs
tests/integration/: test_basic_scenarios.rs  test_binary_name.rs  test_cargo_validation.rs  test_cli_formats.rs  test_constitutional_compliance.rs  test_documentation.rs  test_edge_cases.rs  test_essence_integration.rs  test_fail_on_pattern.rs  test_file_input.rs  test_fit.rs  test_format_json.rs  test_format_json_rollups.rs  test_help_text.rs  test_microservices_compression.rs  test_nginx_compression.rs  test_normalization_integration.rs  test_performance.rs  test_stats_json.rs  test_thread_safety.rs  test_top_n.rs  test_validation_errors.rs  test_version_display.rs
tests/misc/: input_limits.rs  test_detection_performance.rs  test_email_statistics.rs  test_output_snapshots.rs
tests/misc/snapshots/: misc__misc__test_output_snapshots__folded_output.snap  misc__misc__test_output_snapshots__stats_json_format.snap  misc__misc__test_output_snapshots__top_n_output.snap  misc__misc__test_output_snapshots__unique_lines_no_folding.snap
tests/property/: test_normalizer_properties.proptest-regressions  test_normalizer_properties.rs
tests/security/: email_redos.rs  ipv6_redos.rs  security_compliance.rs  test_ipv6_evil_patterns.rs  timeout_protection.rs  timestamp_redos.rs
tests/snapshot/: test_output_snapshots.rs
tests/snapshot/snapshots/: test_output_snapshots__folded_output.snap  test_output_snapshots__stats_json_format.snap  test_output_snapshots__top_n_output.snap  test_output_snapshots__unique_lines_no_folding.snap
tests/unit/: test_bracket_context_pattern.rs  test_http_status_pattern.rs  test_key_value_pattern.rs  test_line_counting.rs  test_log_module_pattern.rs  test_markdown_output.rs  test_pii_sanitization.rs  test_priority_assignment.rs  test_structured_message_pattern.rs  test_text_output.rs
