[package]
name = "lessence"
version = "0.3.1"
edition = "2024"
rust-version = "1.90"
description = "Extract the essence of your logs — compress repetitive lines while preserving all unique information"
license = "MIT"
repository = "https://github.com/air-gapped/lessence"
readme = "README.md"
keywords = ["log-compression", "cli", "log-analysis", "devops", "deduplication"]
categories = ["command-line-utilities", "text-processing"]
exclude = [".github/", ".ideas/", ".claude/", "examples/", "tests/", "benches/"]

[[bin]]
name = "lessence"
path = "src/main.rs"

[dependencies]
regex = "1.10"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11.0"
terminal_size = "0.4.4"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.0"
toml = "1.1"
regex = "1.10"
insta = "1"
proptest = "1"

# Integration tests
[[test]]
name = "test_nginx_compression"
path = "tests/integration/test_nginx_compression.rs"

[[test]]
name = "test_microservices_compression"
path = "tests/integration/test_microservices_compression.rs"

[[test]]
name = "test_constitutional_compliance"
path = "tests/integration/test_constitutional_compliance.rs"

[[test]]
name = "test_cli_formats"
path = "tests/integration/test_cli_formats.rs"

# Contract tests for rename validation
[[test]]
name = "test_binary_name"
path = "tests/integration/test_binary_name.rs"

[[test]]
name = "test_help_text"
path = "tests/integration/test_help_text.rs"

[[test]]
name = "test_version_display"
path = "tests/integration/test_version_display.rs"

[[test]]
name = "test_cargo_validation"
path = "tests/integration/test_cargo_validation.rs"

[[test]]
name = "test_documentation"
path = "tests/integration/test_documentation.rs"

# Top-N mode tests
[[test]]
name = "test_top_n"
path = "tests/integration/test_top_n.rs"

# Fit mode tests
[[test]]
name = "test_fit"
path = "tests/integration/test_fit.rs"

# File input tests
[[test]]
name = "test_file_input"
path = "tests/integration/test_file_input.rs"

# CLI validation tests
[[test]]
name = "test_cli_validation"
path = "tests/contract/test_cli_validation.rs"

[[test]]
name = "test_validation_errors"
path = "tests/integration/test_validation_errors.rs"

# CI exit code tests
[[test]]
name = "test_fail_on_pattern"
path = "tests/integration/test_fail_on_pattern.rs"

# JSON stats tests
[[test]]
name = "test_stats_json"
path = "tests/integration/test_stats_json.rs"

# Multi-format output tests
[[test]]
name = "test_markdown_output"
path = "tests/unit/test_markdown_output.rs"

[[test]]
name = "test_text_output"
path = "tests/unit/test_text_output.rs"

# Performance validation tests
[[test]]
name = "test_detection_performance"
path = "tests/benchmarks/test_detection_performance.rs"

# Security tests
[[test]]
name = "test_ipv6_evil_patterns"
path = "tests/security/test_ipv6_evil_patterns.rs"

# Snapshot tests
[[test]]
name = "test_output_snapshots"
path = "tests/snapshot/test_output_snapshots.rs"

# Property-based tests
[[test]]
name = "test_normalizer_properties"
path = "tests/property/test_normalizer_properties.rs"

# Benchmarks will be added later
# [[bench]]
# name = "pattern_detection"
# harness = false
#
# [[bench]]
# name = "folding_performance"
# harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Selectively allow noisy pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
items_after_statements = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
struct_excessive_bools = "allow"
similar_names = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
case_sensitive_file_extension_comparisons = "allow"
match_same_arms = "allow"
manual_split_once = "allow"
ignored_unit_patterns = "allow"
wildcard_in_or_patterns = "allow"
cast_possible_wrap = "allow"
needless_bool = "allow"
format_push_string = "allow"
manual_strip = "allow"
if_not_else = "allow"
match_wild_err_arm = "allow"
# Warnings we want to enforce
needless_pass_by_value = "warn"

[lints.rust]
unsafe_code = "forbid"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true
