[package]
name = "lessence"
version = "0.4.0"
edition = "2024"
rust-version = "1.90"
description = "Extract the essence of your logs — compress repetitive lines while preserving all unique information"
license = "MIT"
repository = "https://github.com/air-gapped/lessence"
readme = "README.md"
keywords = ["log-compression", "cli", "log-analysis", "devops", "deduplication"]
categories = ["command-line-utilities", "text-processing"]
exclude = [".github/", ".ideas/", ".claude/", "examples/", "tests/", "benches/"]

[[bin]]
name = "lessence"
path = "src/main.rs"
test = false  # lib tests already cover everything; avoids 161 duplicate test runs

[dependencies]
regex = "1.10"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11.0"
terminal_size = "0.4.4"
# Deterministic, cross-platform seeded sampling for rollup metadata.
# rand_chacha is explicitly portable (ChaCha8Rng gives the same sequence
# from the same seed on Linux, macOS, and Windows) — unlike SmallRng,
# which picks the fastest underlying generator per platform and is NOT
# stable across them. Determinism is load-bearing for snapshot tests
# and agent-cacheable outputs; performance is irrelevant here because
# we draw at most K samples per group, not per line.
#
# Keep default-features enabled: the `alloc` feature (on by default) is
# what gates `IndexedRandom::choose_multiple`, and we deliberately skip
# pulling in rand_core for thread-local RNGs we don't use.
rand = { version = "0.9", default-features = false, features = ["alloc"] }
rand_chacha = "0.9"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.0"
toml = "1.1"
regex = "1.10"
insta = "1"
proptest = "1"

# Integration tests
[[test]]
name = "test_nginx_compression"
path = "tests/integration/test_nginx_compression.rs"

[[test]]
name = "test_microservices_compression"
path = "tests/integration/test_microservices_compression.rs"

[[test]]
name = "test_constitutional_compliance"
path = "tests/integration/test_constitutional_compliance.rs"

[[test]]
name = "test_cli_formats"
path = "tests/integration/test_cli_formats.rs"

# Contract tests for rename validation
[[test]]
name = "test_binary_name"
path = "tests/integration/test_binary_name.rs"

[[test]]
name = "test_help_text"
path = "tests/integration/test_help_text.rs"

[[test]]
name = "test_version_display"
path = "tests/integration/test_version_display.rs"

[[test]]
name = "test_cargo_validation"
path = "tests/integration/test_cargo_validation.rs"

[[test]]
name = "test_documentation"
path = "tests/integration/test_documentation.rs"

# Top-N mode tests
[[test]]
name = "test_top_n"
path = "tests/integration/test_top_n.rs"

# Fit mode tests
[[test]]
name = "test_fit"
path = "tests/integration/test_fit.rs"

# File input tests
[[test]]
name = "test_file_input"
path = "tests/integration/test_file_input.rs"

# CLI validation tests
[[test]]
name = "test_cli_validation"
path = "tests/contract/test_cli_validation.rs"

[[test]]
name = "test_validation_errors"
path = "tests/integration/test_validation_errors.rs"

# CI exit code tests
[[test]]
name = "test_fail_on_pattern"
path = "tests/integration/test_fail_on_pattern.rs"

# JSON stats tests
[[test]]
name = "test_stats_json"
path = "tests/integration/test_stats_json.rs"

# --format json tests (Phase 2 — schema shape validation, no rollups yet)
[[test]]
name = "test_format_json"
path = "tests/integration/test_format_json.rs"

# Rollup metadata tests (Phase 3 — variation field shape and determinism)
[[test]]
name = "test_format_json_rollups"
path = "tests/integration/test_format_json_rollups.rs"

# Multi-format output tests
[[test]]
name = "test_markdown_output"
path = "tests/unit/test_markdown_output.rs"

[[test]]
name = "test_text_output"
path = "tests/unit/test_text_output.rs"

# Performance validation tests
[[test]]
name = "test_detection_performance"
path = "tests/benchmarks/test_detection_performance.rs"

# Security tests
[[test]]
name = "test_ipv6_evil_patterns"
path = "tests/security/test_ipv6_evil_patterns.rs"

# Snapshot tests
[[test]]
name = "test_output_snapshots"
path = "tests/snapshot/test_output_snapshots.rs"

# Previously missing integration tests (were dead code — never compiled)
[[test]]
name = "test_basic_scenarios"
path = "tests/integration/test_basic_scenarios.rs"

[[test]]
name = "test_edge_cases"
path = "tests/integration/test_edge_cases.rs"

[[test]]
name = "test_essence_integration"
path = "tests/integration/test_essence_integration.rs"

[[test]]
name = "test_normalization_integration"
path = "tests/integration/test_normalization_integration.rs"

[[test]]
name = "test_performance"
path = "tests/integration/test_performance.rs"

[[test]]
name = "test_thread_safety"
path = "tests/integration/test_thread_safety.rs"

# Property-based tests
[[test]]
name = "test_normalizer_properties"
path = "tests/property/test_normalizer_properties.rs"

# Criterion benchmarks — perf gate for the structured-folding-output feature.
# See docs/bench.md for how to record and compare baselines.
# Files in examples/ are gitignored; benches skip gracefully when missing.
[[bench]]
name = "folder_e2e"
harness = false

[[bench]]
name = "folder_streaming_only"
harness = false

[[bench]]
name = "folder_parallel_e2e"
harness = false

[[bench]]
name = "normalize_line"
harness = false

# Phase 5 calibration harness — not a criterion bench, a one-shot
# binary that measures per-group distinct_count distributions across
# the corpus and recommends values for the three PLACEHOLDER_* constants.
[[bench]]
name = "calibrate_rollup"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Selectively allow noisy pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
items_after_statements = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
struct_excessive_bools = "allow"
similar_names = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
case_sensitive_file_extension_comparisons = "allow"
match_same_arms = "allow"
manual_split_once = "allow"
ignored_unit_patterns = "allow"
wildcard_in_or_patterns = "allow"
cast_possible_wrap = "allow"
needless_bool = "allow"
format_push_string = "allow"
manual_strip = "allow"
if_not_else = "allow"
match_wild_err_arm = "allow"
# Warnings we want to enforce
needless_pass_by_value = "warn"

[lints.rust]
unsafe_code = "forbid"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true

# Faster test execution in debug mode. opt-level=1 recovers 3-5x runtime
# vs opt-level=0 for CPU-bound regex/normalization code, with only ~15%
# longer compile times.
[profile.test]
opt-level = 1

# Custom profile for cargo-mutants: fast execution + fast incremental builds.
# Used via `cargo mutants --profile mutants` or .cargo/mutants.toml.
[profile.mutants]
inherits = "test"
opt-level = 1
debug = "none"
