[package]
name = "lessence-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.lessence]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_normalize"
path = "fuzz_targets/fuzz_normalize.rs"
doc = false

[[bin]]
name = "fuzz_fold"
path = "fuzz_targets/fuzz_fold.rs"
doc = false
